test/classes/methods/method-call-from-field-type.good
method-call-from-field-type.chpl:2: error: unresolved call 'something()'
method-call-from-field-type.chpl:9: note: this candidate did not match: R.something()
method-call-from-field-type.chpl:2: note: because call is not written as a method call
method-call-from-field-type.chpl:9: note: but candidate function is a method
